fixed the services link in the navbar that was off center

--- a/sass/sass/framework/foundation/_settings.scss
+++ b/sass/sass/framework/foundation/_settings.scss
@@ -4,3 +4,4 @@ $topbar-dropdown-link-color: #44868F;
 $topbar-dropdown-link-bg: #E2F6F6;
 $topbar-link-bg-hover: #60CED7;
 $topbar-link-color-active-hover: #fff;
+$topbar-dropdown-toggle-size: 0;
